@startuml
class Mundial.Llave {
+ <<Create>> Mundial.Llave(String,ArrayList<Mundial.Partido>)
+ ArrayList<Mundial.Equipo> getEquiposQueAvanzan()
}
class Mundial.Main {
+ {static} void main(String[])
}
class Mundial.Equipo {
- String nombre
- ArrayList<Mundial.Partido> partidosJugados
+ <<Create>> Mundial.Equipo(String,ArrayList<Mundial.Partido>)
+ String getNombre()
+ void setNombre(String)
+ ArrayList<Mundial.Partido> getPartidosJugados()
}
class Mundial.Resultado {
- int golesLocales
- int golesVisitantes
+ <<Create>> Mundial.Resultado(int,int)
+ <<Create>> Mundial.Resultado()
+ int getGolesLocales()
+ void setGolesLocales(int)
+ int getGolesVisitantes()
+ void setGolesVisitantes(int)
+ boolean ganoLocal()
+ boolean empate()
}
class Mundial.Grupo {
+ <<Create>> Mundial.Grupo(String,ArrayList<Mundial.Partido>)
+ ArrayList<Mundial.Equipo> getEquiposQueAvanzan()
}
class Mundial.Partido {
- Date fecha
- Mundial.Equipo local
- Mundial.Equipo visitante
- Mundial.Resultado resultado
+ <<Create>> Mundial.Partido(Date,Mundial.Equipo,Mundial.Equipo)
+ Date getFecha()
+ void setFecha(Date)
+ Mundial.Equipo getLocal()
+ void setLocal(Mundial.Equipo)
+ Mundial.Equipo getVisitante()
+ void setVisitante(Mundial.Equipo)
+ Mundial.Resultado getResultado()
+ void setResultado(Mundial.Resultado)
}
class Mundial.EtapaMundial {
- String descripcionEtapa
- ArrayList<Mundial.Partido> partidos
+ <<Create>> Mundial.EtapaMundial(String,ArrayList<Mundial.Partido>)
+ void setDescripcionEtapa(String)
+ void setPartidos(ArrayList<Mundial.Partido>)
+ String getDescripcionEtapa()
+ ArrayList<Mundial.Partido> getPartidos()
+ ArrayList<Mundial.Equipo> getEquiposQueAvanzan()
+ void addPartido(Mundial.Partido)
}


Mundial.EtapaMundial <|-- Mundial.Llave
Mundial.EtapaMundial <|-- Mundial.Grupo
@enduml